# mmv

./: .gitignore  ANNOUNCE  ARTICLE  AUTHORS  COPYING  MANIFEST.in  Makefile  Makefile.am  NEWS  READ.ME  README.md  bootstrap.conf  cmdline-vala.h  cmdline.vapi  configure.ac  mmv-include.man  mmv.1  mmv.c  mmv.h  mmv.vala  mmv.vapi  mmv_c.c  opts.ggo  pyproject.toml  setup.py  tox.ini
.github/workflows/: c-cpp.yml  macos.yml
build-aux/: .gitignore  mmv-help2man-wrapper
mmv/: __init__.py  __main__.py
tests/: conftest.py  test_mmv.py  testutils.py
